chamando a tela de orçamento bonitinho

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         </div>
         <div class="modal-footer">
             <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Continuar Comprando</a>
-            <a href="source/cliente/orcamento.html" class="modal-action modal-close waves-effect waves-green btn-flat">Finalizar Compra</a>
+            <a onclick="chamarTela('source/cliente/orcamento.html','Orçamento')" class="modal-action modal-close waves-effect waves-green btn-flat">Finalizar Compra</a>
         </div>
     </div>
 </body>
