--- a/source/empresa/controlepedidos.html
+++ b/source/empresa/controlepedidos.html
@@ -1,17 +1,17 @@
 ﻿<div class="col s12" div="filtros">
     <div id="divEsquerda">
         <span class="fl">
-					<input name="group1" type="radio" id="test1" checked />
-					<label for="test1">Todos os pedidos</label>
-    			</span>
+            <input name="group1" type="radio" id="test1" checked />
+            <label for="test1">Todos os pedidos</label>
+        </span>
         <span class="fl">
-      				<input name="group1" type="radio" id="test2"/>
-      				<label for="test2">Pedidos aprovados</label>
-    			</span>
+            <input name="group1" type="radio" id="test2" />
+            <label for="test2">Pedidos aprovados</label>
+        </span>
         <span class="fl">
-      				<input name="group1" type="radio" id="test3"/>
-      				<label for="test3">Pedidos rejeitados</label>
-    			</span>
+            <input name="group1" type="radio" id="test3" />
+            <label for="test3">Pedidos rejeitados</label>
+        </span>
     </div>
     <div class="input-field select" id="divFiltrarPor">
         <select class="validate">
@@ -25,38 +25,16 @@
 <hr>
 <table class="responsive-table centered highlight">
     <thead>
-    <tr>
-        <th>Cod.</th>
-        <th>Data do pedido</th>
-        <th>Custo de producao</th>
-        <th>Lucro esperado</th>
-        <th></th>
-    </tr>
+        <tr>
+            <th>Cod.</th>
+            <th>Data do pedido</th>
+            <th>Custo de producao</th>
+            <th>Lucro esperado</th>
+            <th></th>
+        </tr>
     </thead>
 
-    <tbody>
-    <tr>
-        <td>#00042</td>
-        <td>01/04/2017</td>
-        <td>R$30,00</td>
-        <td>R$20,00</td>
-        <td><a class="waves-effect waves-light btn modal-trigger" href="#modalDetalhesPedido" onclick="mostrarModal(1)">Mais detalhes</a></td>
-    </tr>
-    <tr>
-        <td>#02235</td>
-        <td>01/04/2017</td>
-        <td>R$300,00</td>
-        <td>R$200,00</td>
-        <td><a class="waves-effect waves-light btn modal-trigger" href="#modalDetalhesPedido" onclick="mostrarModal(2)">Mais detalhes</a></td>
-    </tr>
-    <tr>
-        <td>#03395</td>
-        <td>01/04/2017</td>
-        <td>R$3000,00</td>
-        <td>R$2000,00</td>
-        <td><a class="waves-effect waves-light btn modal-trigger" href="#modalDetalhesPedido" onclick="mostrarModal(3)">Mais detalhes</a></td>
-    </tr>
-    </tbody>
+    <tbody id="body-table"></tbody>
 </table>
 <script>
     var imagens = new Array();
@@ -66,8 +44,8 @@
     var tempoEstimado = new Array();
     var itemClicado = -1;
 
-    $(document).ready(function() {
-        
+    $(document).ready(function () {
+        listarPedidos();
     });
 
     $('tbody').hide();
@@ -77,14 +55,45 @@
     }
 
     function listarPedidos() {
-        requisicao("listarPedidos", function(result) {
+        var bodyTable = document.getElementById("body-table");
+        var html = "";
+        requisicao("listarPedidos", function (result) {
             console.log(result);
+            result.forEach(function (pedido, index) {
+                html += "<tr>";
+                html += "<td>" + pedido.id + "</td>";
+                html += "<td>" + pedido.dataCompra + "</td>";
+                html += "<td>R$3000,00</td>";
+                html += "<td>R$500,00</td>";
+                html += '<td><a class="waves-effect waves-light btn modal-trigger" href="#modalDetalhesPedido" onclick="mostrarModal(' + (index + 1) + ')">Mais detalhes</a></td>';
+                html += "</tr>"
+            });
+            $("#body-table").html(html);
+        });
+    }
+
+    function listarProdutos(numPedido) {
+        var body = document.getElementById("itens-pedido");
+        var html = "";
+        requisicao("listarPedidos", function (result) {
+            result.forEach(function (pedido, index) {
+                if (index == numPedido) {
+                    html += '<h5 class="center">Itens do Pedido</h5>';
+                    pedido.produtos.forEach(function (produto, index) {
+                        console.log(produto.produto.nome);
+                        html += '<div id="p' + (index+1) + '" class="div-produto" onclick="selecionarProduto(' + (index+1) + ')"><span>' + produto.produto.nome + ' </span>' + produto.quantidade + '</div>';
+                        html += '<div id="dp' + (index+1) + '" class="detalhes-produto"><h6>Matéria-prima</h6>Item 1: Em estoque<br>Item 2: Em falta<h6>Tempo de Produção</h6>6 dias<hr>Finalizado: <i id="check' + (index+1) + '" onclick="checar(' + (index+1) + ')" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i></div>';
+                        console.log(html);
+                    });
+                    $("#itens-pedido").html(html);
+                }
+            });
         });
     }
 
     function requisicao(query, callback) {
         $.ajax({
-            url: "http://127.0.0.1/?usuario=" + getCookie("usuariologado") + "&senha=" + getCookie("senha") + "&" + query,
+            url: "http://127.0.0.1:880/?usuario=" + getCookie("usuariologado") + "&senha=" + getCookie("senha") + "&operacao=" + query,
             success: callback
         });
     }
@@ -131,6 +140,7 @@
     }
 
     function mostrarModal(i) {
+        listarProdutos(i-1);
     }
 
     function selecionarProduto(i) {
@@ -162,14 +172,13 @@
 
 </script>
 <style>
-
     .input-field.select {
         display: inline-block;
         width: 150px;
         margin-bottom: -20px;
     }
 
-    .clearFull{
+    .clearFull {
         display: block;
         clear: both;
     }
@@ -189,18 +198,18 @@
 
     .div-produto {
         padding: 10px;
-        box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 1 );
+        box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 1);
         width: 90%;
         margin-left: 5%;
         margin-top: 2px;
         transition: 0.5s;
     }
 
-    .div-produto > span {
+    .div-produto>span {
         font-size: 120%;
     }
 
-    .div-produto.selecionado > span {
+    .div-produto.selecionado>span {
         font-weight: bold;
     }
 
@@ -231,7 +240,7 @@
         vertical-align: top;
     }
 
-    .detalhes-produto > h6 {
+    .detalhes-produto>h6 {
         font-size: 100%;
         font-weight: bold;
     }
@@ -245,9 +254,8 @@
     }
 
     .check:hover {
-        cursor:default;
+        cursor: default;
     }
 
     /*  */
-
 </style>
