Melhorias no controle de pedidos
Agora a estimativa de tempo de produção funciona, e um tempo médio é calculado com base no tempo que cada produto leva pra ser finalizado.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <!--- Modal Structure Controle Pedidos -->
     <div id="modalDetalhesPedido" class="modal">
         <div class="modal-content">
-            <h4 class="center">Pedido #2354</h4>
+            <h4 class="center">Pedido <span id="idDoPedido"></span></h4>
             <div id="itens-pedido">
                 <h5 class="center">Itens do Pedido</h5>
                 <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Caixas K </span>x20</div>
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <div id="detalhes-pedido">
-                <h5 class="center">Detalhes do Pedido</h5>
+                <h5 class="center" style="margin-bottom: 20px">Detalhes do Pedido</h5>
                 <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Lucro Estimado: </span>R$50,00</div>
                 <div id="p2" class="div-produto" onclick="selecionarProduto(2)"><span>Tempo Estimado: </span>10 dias</div>
                 <div id="p3" class="div-produto" onclick="selecionarProduto(3)"><span>Falta Matéria-Prima? </span>Sim</div>
