--- a/source/cliente/orcamento.html
+++ b/source/cliente/orcamento.html
@@ -80,7 +80,7 @@
             Estimativa de preço: R$<span id="estPreco"></span>
         </h3>
         <h4>
-            Prazo de entrega: 2 meses
+            Prazo de entrega: <span id="estTempo"></span> dias
         </h4>
     </div>
     <!--Footer -->
@@ -101,11 +101,15 @@ $(document).ready(function() {
         url: "http://127.0.0.1:880?operacao=listarItensCarrinho&usuario=" + getCookie('usuariologado') + "&senha=" + getCookie('senha'),
         success: function(shulambs) {
             var precoTotal = 0;
+            var tempoTotal = 0;
             shulambs.forEach(function(item) {
                 $("#campos").html($('#campos').html() + '<tr><td class="nomeprod">' + item.produto.nome + '</td><td>' + item.quantidade + '</td><td>' + parseFloat((item.produto.preco * item.quantidade).toFixed(2)) +'</td></tr>');
+                if (item.produto.tempoMedio > tempoTotal) tempoTotal = item.produto.tempoMedio;
                 precoTotal = precoTotal + (item.produto.preco * item.quantidade);
             });
+            console.log(shulambs);
             $("#estPreco").html(parseFloat(precoTotal.toFixed(2)));
+            $("#estTempo").html(tempoTotal);
         }
     });
 }); 
@@ -114,10 +118,13 @@ function confirmaPedido(){
         url : "http://127.0.0.1:880?operacao=finalizarPedido&usuario=" + getCookie('usuariologado') + "&senha=" + getCookie('senha'),
         success: function(shulambs) {
             if(shulambs.status == "OK"){
-                alert("Pedido concluído!");
+                //alert("Pedido concluído!");
+                Materialize.toast("Pedido concluído!", 4000);
+                chamarTela("source/cliente/meuspedidos.html", "Meus Pedidos");
             }
             else{ 
-                alert("Erro ao finalizar pedido");
+                //alert("Erro ao finalizar pedido");
+                Materialize.toast("Erro ao finalizar pedido!", 4000);
             }
         }
     })
