--- a/index.html
+++ b/index.html
@@ -155,45 +155,8 @@
     <div id="modalDetalhesPedido" class="modal">
         <div class="modal-content">
             <h4 class="center">Pedido <span id="idDoPedido"></span></h4>
-            <div id="itens-pedido">
-                <h5 class="center">Itens do Pedido</h5>
-                <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Caixas K </span>x20</div>
-                <div id="dp1" class="detalhes-produto">
-                    <h6>Matéria-prima</h6>
-                    Item 1: Em estoque<br>
-                    Item 2: Em falta
-                    <h6>Tempo de Produção</h6>
-                    6 dias
-                    <hr>
-                    Finalizado: <i id="check1" onclick="checar(1)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
-                </div>
-                <div id="p2" class="div-produto" onclick="selecionarProduto(2)"><span>Flaconete </span>x10</div>
-                <div id="dp2" class="detalhes-produto">
-                    <h6>Matéria-prima</h6>
-                    Item 1: Em estoque<br>
-                    Item 2: Em falta
-                    <h6>Tempo de Produção</h6>
-                    6 dias
-                    <hr>
-                    Finalizado: <i id="check2" onclick="checar(2)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
-                </div>
-                <div id="p3" class="div-produto" onclick="selecionarProduto(3)"><span>Frasco </span>x25</div>
-                <div id="dp3" class="detalhes-produto">
-                    <h6>Matéria-prima</h6>
-                    Item 1: Em estoque<br>
-                    Item 2: Em falta
-                    <h6>Tempo de Produção</h6>
-                    6 dias
-                    <hr>
-                    Finalizado: <i id="check3" onclick="checar(3)" class="check material-icons" style="vertical-align: bottom">radio_button_unchecked</i>
-                </div>
-            </div>
-            <div id="detalhes-pedido">
-                <h5 class="center" style="margin-bottom: 20px">Detalhes do Pedido</h5>
-                <div id="p1" class="div-produto" onclick="selecionarProduto(1)"><span>Lucro Estimado: </span>R$50,00</div>
-                <div id="p2" class="div-produto" onclick="selecionarProduto(2)"><span>Tempo Estimado: </span>10 dias</div>
-                <div id="p3" class="div-produto" onclick="selecionarProduto(3)"><span>Falta Matéria-Prima? </span>Sim</div>
-            </div>
+            <div id="itens-pedido"></div>
+            <div id="detalhes-pedido"></div>
         </div>
         <div class="modal-footer">
                 <a href="#!" class="modal-action modal-close waves-effect btn  teal lighten-2">Fechar</a>
