--- a/source/empresa/controleEstoque.html
+++ b/source/empresa/controleEstoque.html
@@ -29,7 +29,21 @@
         var nome = $("#"+nomeP).text();
         var quant = $("#"+quantP).text();
         
-        document.getElementById("subs").innerHTML = '<div id="novaDiv"><h1>Materia Prima</h1>Nome: <h5>'+nome+'</h5>Quantidade: <h5>'+quant+'</h5><a id="selo" class="waves-light btn red"></a></div>';  
+        var cor;
+        var possui = checarMateriaPrima(nome, function(result) {
+            if (result.emEstoque)
+                cor = "green";
+            else cor = "red";
+
+            $("#subs").html('<div id="novaDiv"><h1>Materia Prima</h1>Nome: <h5>'+nome+'</h5>Quantidade: <h5>'+quant+'</h5><a id="selo" class="waves-light btn ' + cor + '"></a></div>');  
+        });
+    }
+
+    function checarMateriaPrima(nome, callback) {
+        $.ajax({
+            url: "http://127.0.0.1:880?operacao=checarMateriaPrima&usuario=" + getCookie('usuariologado') + "&senha=" + getCookie('senha') + "&nome=" + nome,
+            success: callback
+        });
     }
 
     function adicionarProduto() {
